--- a/backend/task-manager-frontend/public/manifest.json
+++ b/backend/task-manager-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Anotações",
+  "name": "Anotações",
   "icons": [
     {
       "src": "favicon.ico",
