feat: suportar PDFs de entrega via Supabase Storage

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,3 +16,17 @@ CORS_ORIGIN_REGEX=^https://.*\\.vercel\\.app$
 # Opcional: caminho para uploads persistentes.
 # Exemplo em Render: /var/data/uploads
 UPLOADS_DIR=
+
+# Opcional (recomendado no Render Free): usar Supabase Storage para PDFs.
+# Quando SUPABASE_URL + SUPABASE_SERVICE_ROLE_KEY + SUPABASE_STORAGE_BUCKET estiverem preenchidos,
+# o backend salva os arquivos de entregas no Supabase em vez do disco local.
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+SUPABASE_STORAGE_BUCKET=deliveries
+SUPABASE_STORAGE_PREFIX=deliveries
+# true: usa URL pública do bucket | false: gera URL assinada com expiração.
+SUPABASE_STORAGE_PUBLIC=true
+# true: tenta resolver caminhos antigos (ex.: deliveries/arquivo.pdf) no bucket do Supabase.
+SUPABASE_STORAGE_LEGACY_PATHS=true
+# TTL da URL assinada em segundos (usado quando SUPABASE_STORAGE_PUBLIC=false).
+SUPABASE_STORAGE_SIGNED_URL_TTL=3600
