fix(deploy): stabilize Render startup and harden Supabase PDF URL resolution

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,6 +17,12 @@ CORS_ORIGIN_REGEX=^https://.*\\.vercel\\.app$
 # Exemplo em Render: /var/data/uploads
 UPLOADS_DIR=
 
+# Controle do bootstrap de banco na inicializacao:
+# background (padrao): executa ajustes em segundo plano sem bloquear a abertura da porta
+# sync: executa ajustes de forma sincronizada antes de atender requisicoes
+# off: desativa os ajustes automaticos
+DB_BOOTSTRAP_MODE=background
+
 # Opcional (recomendado no Render Free): usar Supabase Storage para PDFs.
 # Quando SUPABASE_URL + SUPABASE_SERVICE_ROLE_KEY + SUPABASE_STORAGE_BUCKET estiverem preenchidos,
 # o backend salva os arquivos de entregas no Supabase em vez do disco local.
