--- a/backend/task-manager-frontend/public/manifest.json
+++ b/backend/task-manager-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Anotações",
-  "name": "Anotações",
+  "short_name": "Gestão",
+  "name": "Gestão de Tarefas",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#d06a3a",
   "background_color": "#ffffff"
 }
